2010-05-31  Joel Brobecker  <brobecker@adacore.com>

	* gdb.base/subst.exp: Fix call to gdb_test with empty message.

2010-05-31  Jan Kratochvil  <jan.kratochvil@redhat.com>

	Accept the new Linux kernel "t (tracing stop)" string.
	* gdb.threads/watchthreads-reorder.c (thread1_func, thread2_func):
	Update comment.
	(state_wait) <T (tracing stop)>: New.
	(main): Update the state_wait expect string.

2010-05-28  Pedro Alves  <pedro@codesourcery.com>

	* limits.c, limits.exp: Delete files.
	* Makefile.in (clean mostlyclean): Adjust.
	* tracecmd.exp: Adjust.

2010-05-28  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* gdb.base/tui-layout.exp: New.

2010-05-28  Michael Snyder  <msnyder@msnyder-server.eng.vmware.com>

	* gdb.reverse/break-precsave.exp: 
	Replace uses of send_gdb / gdb_expect.
	* gdb.reverse/break-reverse.exp: 
	Replace uses of send_gdb / gdb_expect.
	* gdb.reverse/consecutive-precsave.exp: 
	Replace uses of send_gdb / gdb_expect.
	* gdb.reverse/consecutive-reverse.exp: 
	Replace uses of send_gdb / gdb_expect.
	* gdb.reverse/finish-precsave.exp: 
	Replace uses of send_gdb / gdb_expect.
	* gdb.reverse/finish-reverse.exp: 
	Replace uses of send_gdb / gdb_expect.
	* gdb.reverse/i386-precsave.exp: 
	Replace uses of send_gdb / gdb_expect.
	* gdb.reverse/i386-reverse.exp: 
	Replace uses of send_gdb / gdb_expect.
	* gdb.reverse/i386-sse-reverse.exp: 
	Replace uses of send_gdb / gdb_expect.
	* gdb.reverse/i387-env-reverse.exp: 
	Replace uses of send_gdb / gdb_expect.
	* gdb.reverse/i387-stack-reverse.exp: 
	Replace uses of send_gdb / gdb_expect.
	* gdb.reverse/machinestate-precsave.exp: 
	Replace uses of send_gdb / gdb_expect.
	* gdb.reverse/machinestate.exp: 
	Replace uses of send_gdb / gdb_expect.
	* gdb.reverse/sigall-precsave.exp: 
	Replace uses of send_gdb / gdb_expect.
	* gdb.reverse/sigall-reverse.exp: 
	Replace uses of send_gdb / gdb_expect.
	* gdb.reverse/solib-precsave.exp: 
	Replace uses of send_gdb / gdb_expect.
	* gdb.reverse/solib-reverse.exp: 