@@ -284,7 +284,7 @@ proc watchpoint_command_test {} {
 
     if {$wp_id == -1} {return}
 
-    gdb_test_multiple "commands $wp_id\n" "begin commands on watch" {
+    gdb_test_multiple "commands $wp_id" "begin commands on watch" {
 	-re "Type commands for breakpoint.*, one per line.*>$" {
 	    pass "begin commands on watch"
 	}
